# msiAlign

./: LICENSE  README.md  metadata_crawler.py  msiAlign.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  python-publish.yml
doc/: how_to_use.md
msiAlign/: __main__.py  doc.py  downcore_profile.py  func.py  menubar.py  metadata_crawler.py  msiAlign.py  objects.py  rclick.py  shinyApp.py  to1d.py
scripts/: long_time_series.py  parser.py  to1d.py
