[project]
name = "msiAlign"
version = "1.0.0"
description = "A simple tool to manually register multiple MSI-related images"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name="Weimin Liu", email="wliu@marum.de" }]
dependencies = [
    "numpy",
    "pillow",
    "pandas",
    "matplotlib",
    "shiny",
    ]

[project.scripts]
msialign = "msiAlign.__main__:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"